5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1602_1016.log
== TEST (2019-03-22 01:43:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = float(input("Qual o valor do lado a?"))
b = float(input("Qual o valor do lado b?"))
c = float(input("Qual o valor do lado c?"))

s = (a + b + c)/2

area = sqrt(s(s-a)*(s-b)*(s-c))

print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    area = sqrt(s(s-a)*(s-b)*(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 01:44:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

a = float(input("Qual o valor do lado a?"))
b = float(input("Qual o valor do lado b?"))
c = float(input("Qual o valor do lado c?"))

s = (a + b + c)/2

area = math.sqrt(s(s-a)*(s-b)*(s-c))

print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    area = math.sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 01:45:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

a = float(input("Qual o valor do lado a? "))
b = float(input("Qual o valor do lado b? "))
c = float(input("Qual o valor do lado c? "))

s = (a + b + c)/2

area = sqrt(s(s-a)*(s-b)*(s-c))

print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    area = sqrt(s(s-a)*(s-b)*(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 01:46:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

a = float(input("Qual o valor do lado a? "))
b = float(input("Qual o valor do lado b? "))
c = float(input("Qual o valor do lado c? "))

s = (a + b + c)/2

area = math.sqrt (s(s-a)*(s-b)*(s-c))

print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    area = math.sqrt (s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 01:47:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

a = float(input("Qual o valor do lado a? "))
b = float(input("Qual o valor do lado b? "))
c = float(input("Qual o valor do lado c? "))

s = float((a + b + c)/2)

area = math.sqrt (s(s-a)*(s-b)*(s-c))

print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    area = math.sqrt (s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 01:48:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

a = float(input("Qual o valor do lado a? "))
b = float(input("Qual o valor do lado b? "))
c = float(input("Qual o valor do lado c? "))

s = float((a + b + c)/2)

area = float(math.sqrt (s(s-a)*(s-b)*(s-c)))

print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    area = float(math.sqrt (s(s-a)*(s-b)*(s-c)))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 01:49:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

a = int(input("Qual o valor do lado a? "))
b = int(input("Qual o valor do lado b? "))
c = int(input("Qual o valor do lado c? "))

s = int((a + b + c)/2)

area = math.sqrt (s(s-a)*(s-b)*(s-c))

print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 01:50:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

a = int(input("Qual o valor do lado a? "))
b = int(input("Qual o valor do lado b? "))
c = int(input("Qual o valor do lado c? "))

s = int((a + b + c)/2)

area = math.sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 01:51:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

a = float(input("Qual o valor do lado a? "))
b = float(input("Qual o valor do lado b? "))
c = float(input("Qual o valor do lado c? "))

s = float((a + b + c)/2)

area = math.sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 01:51:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

a = float(input("Qual o valor do lado a? "))
b = float(input("Qual o valor do lado b? "))
c = float(input("Qual o valor do lado c? "))

s = float((a + b + c)/2)

area = math.sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area, 5))
-- EXECUTION TIME:
0.152685
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
